# sous

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.agent  README.md  chat-summary.md  main.py  pyproject.toml
.agents/rules/: senior-staff-engineer.md
backend/: config.py  main.py
backend/api/: voice.py
backend/voice/: agent.py  chef_llm.py
chef/: agent.py  constants.py  session-summary.md
chef/graph/: chat_models.py  prompts.py  utils.py
chef/graph/nodes/: __init__.py  briefing.py  confirmation_ack.py  confirmation_compute.py  new_proposal.py  node_names.py  simple_query_response.py  step_change_response.py
chef/graph/state/: chef_state.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  RecipeDetailPage.tsx  VoiceSession.tsx  config.ts  main.tsx  types.ts
frontend/src/api/: recipes.ts  session.ts  user.ts
frontend/src/components/: ProtectedRoute.tsx  SessionsRemaining.tsx
frontend/src/hooks/: useIngredientChecklist.ts  useRecipes.ts  useSessionsRemaining.ts  useStartSession.ts
frontend/src/pages/: CookPage.tsx  LandingPage.tsx  RecipeDetailPage.tsx  RecipeListPage.tsx  SignInPage.tsx
frontend/src/styles/: CookPage.css  LandingPage.css  RecipeDetailPage.css  RecipeListPage.css  SignInPage.css  VoiceSession.css  shared.css
recipe_ingest/: agent.py
recipe_ingest/graph/: chat_models.py  state.py  tools.py
recipe_ingest/services/: youtube.py
scripts/: chat.py  ingest.py
shared/: config.py
shared/db/: __init__.py  engine.py  models.py  recipes.py
shared/schemas/: recipe.py
(+12 files in other folders)
