[project]
name = "sous"
version = "0.1.0"
description = "A sous chef that understands and helps you cook recipes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.8",
    "sarvamai>=0.1.25",
    "yt-dlp>=2026.2.4",
]
