[project]
name = "sous"
version = "0.1.0"
description = "A sous chef that understands and helps you cook recipes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.8",
    "livekit-agents[silero]>=1.4.5",
    "livekit-api>=1.1.0",
    "livekit-plugins-google>=1.4.5",
    "livekit-plugins-groq>=1.4.5",
    "pydantic-settings>=2.13.1",
    "sarvamai>=0.1.25",
    "uvicorn[standard]>=0.41.0",
    "yt-dlp>=2026.2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: multi-turn tests that hit the LLM API multiple times"]
timeout = 30
